--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.application.name=ecomapigateway
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-#eureka.instance.prefer-ip-address=true
+eureka.instance.leaseRenewalIntervalInSeconds=30
+eureka.instance.leaseExpirationDurationInSeconds=90
 
 # Route Config
 spring.cloud.gateway.routes[0].id=productservice
@@ -15,8 +16,17 @@ spring.cloud.gateway.routes[1].id=userservice
 spring.cloud.gateway.routes[1].predicates[0]=Path=/user/**
 spring.cloud.gateway.routes[1].uri=lb://userservice
 
+spring.cloud.gateway.routes[2].id=actuator
+spring.cloud.gateway.routes[2].predicates[0]=Path=/actuator/**
+spring.cloud.gateway.routes[2].uri=http://localhost:8080
+
 # Actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+management.endpoint.gateway.enabled=true
+management.health.eureka.enabled=true
+
+
 
 
 
